# aioportainer

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.ru.md  container-control.py  container-logs.py  container-stats.py  deploy.py  mkdocs.yml  opencode.json  pyproject.toml  requirements.txt  stack-containers.py  stack-list.py
.github/workflows/: publish.yaml  tests.yaml
.opencode/skills/portainer-cli/: SKILL.md
.opencode/skills/portainer-git/: SKILL.md
docs/: cli.md  client.md  index.md  listener.md  models.md  watcher.md
portainer/: __init__.py  cli.py  client.py  container_manager.py  exceptions.py  listener.py  models.py  monitor.py  retry.py  stack_manager.py  watcher.py
tests/: conftest.py  test_client.py  test_models.py
